[workspace.package]
version = "0.1.0"
authors = ["Robbin Huang <dev@ikarishinjigao.cc>"]
edition = "2021"

[workspace]
resolver = "2"
members = [
    "components/crypto",
    "components/proto",
    "tools/apk-download",
    "tools/apk-protobuf-gen",
    "tools/protobuf-gen",
    "tools/uniffi-bindgen",
]

[workspace.dependencies]
uniffi = "0.28.1"
