[workspace.package]
version = "0.1.1"
authors = ["Robbin Huang <dev@ikarishinjigao.cc>"]
edition = "2021"

[workspace]
resolver = "2"
members = [
    "components/crypto",
    "components/network",
    "components/proto",
    "tools/apk-download",
    "tools/apk-protobuf-gen",
    "tools/protobuf-gen",
    "tools/uniffi-bindgen",
]
default-members = [
    "components/crypto",
    "components/network",
    "components/proto",
]

[workspace.dependencies]
uniffi = "0.28.1"

[profile.release]
opt-level = "s"
debug = true
lto = true
