[workspace.package]
version = "0.1.1"
authors = ["Robbin Huang <dev@ikarishinjigao.cc>"]
edition = "2021"

[workspace]
resolver = "2"
members = [
    "components/core",
    "components/crypto",
    "components/network",
    "tools/apk-download",
    "tools/apk-protobuf-gen",
    "tools/protobuf-gen",
    "tools/uniffi-bindgen",
]
default-members = ["components/core", "components/crypto", "components/network"]

[workspace.dependencies]
uniffi = "0.28.1"

[profile.release]
opt-level = "z"
debug = true
lto = true
codegen-units = 1
panic = "abort"
