[package]
name = "network"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
proto = { path = "../proto" }
reqwest = { version = "0.12.7", features = [
    "multipart",
    "gzip",
    "native-tls-vendored",
] }
thiserror = "1.0.63"
uniffi = { workspace = true, features = [
    "tokio",
    "scaffolding-ffi-buffer-fns",
] }
stacker = "0.1"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
