[package]
name = "apk-download"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.89"
indicatif = "0.17.8"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["stream", "cookies"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
